[package]
name = "ladis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.11.0"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1